--- a/.github/workflows/send-daily-signal.yml
+++ b/.github/workflows/send-daily-signal.yml
@@ -18,7 +18,10 @@ jobs:
         with:
           python-version: '3.10'
 
-       - name: Run generate_signal.py
+      - name: Install dependencies
+        run: pip install requests
+
+      - name: Run generate_signal.py
         run: python generate_signal.py
 
       - name: Run send_telegram.py
